# mne-tesa

./: .gitignore  .readthedocs.yaml  README.md  mne_tesa.py  plotly_evoked.py  pyproject.toml  tesa-mv.ipynb  tutorial.ipynb
.ipynb_checkpoints/: mne_tesa-checkpoint.py  tutorial-checkpoint.ipynb
docs/source/: conf.py  index.rst  mne_tesa.rst  modules.rst  plotly_evoked.rst
docs/source/_autosummary/: mne_tesa.ICA_TESA.find_bads_electrode_noise.rst  mne_tesa.ICA_TESA.find_bads_lateral_eye_movement.rst  mne_tesa.ICA_TESA.find_bads_tms_muscle.rst  mne_tesa.find_pulse.rst  mne_tesa.mne_tesa_class_comp.rst  mne_tesa.notch_filter_epochs.rst  mne_tesa.tesa_ica_select.rst  mne_tesa.tesa_interp_cubic_spline.rst  mne_tesa.tesa_replace_constant_amplitude.rst  plotly_evoked.plot_evoked.rst  plotly_evoked.plot_gfp.rst
docs/source/_static/: style.css
