[project]
name = "mne-tesa"
version = "0.1.0"
description = "Adaptation of TMS-EEG signal analyzer (TESA) using MNE-Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "mne>=1.10.2",
    "mne-faster>=1.2.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "scikit-learn>=1.7.2",
]
[tool.setuptools]
py-modules = ["mne_tesa", "plotly_evoked"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
